# rag-cli

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONVERSION_PLAN.md  LICENSE  README.md  STYLE.md  elm.json  pyproject.toml
cmake/: embed_zip.cmake  fetch_esbuild.cmake
design_docs/: chat-compaction.md  elm_interview.txt
plans/: chat-compaction.md
src/: chat.cpp  chat.hpp  config.hpp  console.cpp  console.hpp  embedded_resources.cpp  embedded_resources.hpp  file_resolver.cpp  file_resolver.hpp  file_watcher.cpp  file_watcher.hpp  http_server.cpp  http_server.hpp  inotify_watcher.cpp  inotify_watcher.hpp  input_editor.cpp  input_editor.hpp  main.cpp  markdown_renderer.cpp  markdown_renderer.hpp  mcp_server.cpp  mcp_server.hpp  mcp_tools.hpp  openai_client.cpp  openai_client.hpp  settings.cpp  settings.hpp  terminal.cpp  terminal.hpp  vector_store.cpp  vector_store.hpp  verbose.hpp  websocket_server.cpp  websocket_server.hpp
src/elm/: Main.elm  Navigation.elm  Ports.elm  Settings.elm  Websocket.elm
src/elm/Main/: Debug.elm  Style.elm
src/elm/Markdown/: Assembler.elm  BlockSplitter.elm  ChatMarkBlock.elm  RawBlock.elm  Render.elm  StyledRenderer.elm  TextChunks.elm
src/elm/Pages/Agents/: Component.elm  Model.elm  Msg.elm  Update.elm  View.elm
src/elm/Pages/Chat/: Component.elm  Model.elm  Msg.elm  Update.elm  View.elm
src/elm/Pages/Intro/: Component.elm  Model.elm  Msg.elm  Update.elm  View.elm
src/providers/: factory.cpp  factory.hpp  provider.hpp  types.hpp
src/providers/gemini/: gemini_provider.cpp  gemini_provider.hpp
src/providers/openai/: openai_provider.cpp  openai_provider.hpp
src/rag_cli/: __init__.py  main.py
tests/: test_markdown_renderer.cpp
www/: elm.js  index.html  index.ts  navigation.ts  tsconfig.json  websockets.ts
