[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-cli"
version = "0.1.0"
description = "A RAG CLI tool using OpenAI's vector store and file search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Rupert Smith" }
]
keywords = ["rag", "openai", "cli", "vector-store", "file-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
rag-cli = "rag_cli.main:cli"

[project.urls]
Homepage = "https://github.com/rupertlssmith/rag-cli"
Repository = "https://github.com/rupertlssmith/rag-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_cli"]
